# HappyAnonymity

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  REPORT.md  docker-compose.yml  pyproject.toml
data/input/: people_walking.webm  walking_nyc.webm
docs/superpowers/specs/: 2026-03-24-face-anonymization-design.md
scripts/: download_models.py
src/: __init__.py  __main__.py  benchmark.py  blurring.py  cli.py  comparison.py  detector.py  pipeline.py  types.py  video_io.py
src/trackers/: __init__.py  base.py  deepsort_adapter.py  sort_adapter.py  strongsort_adapter.py
